<resources>
    <string name="app_name">MisDeudores</string>
    <string name="hola_mundo">Hola Mundo!</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="contraseña">Contraseña</string>
    <string name="repita_contraseña">Repita Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="digite_nombre">Nombre</string>
    <string name="deuda">Valor deuda</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="campo_obligatorio">* Campo obligatorio</string>
    <string name="crear">Crear</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="login">Login</string>
    <string name="title_activity_bottom">Bottom Activity</string>
    <string name="error_contrasena">Las contraseñas no coinciden</string>
    <string name="contrasenacorta">La contraseña debe tener mínimo 6 dígitos</string>
    <string name="campo_vacio">El campo no puede estar vacío</string>
    <string name="registro_guardado">Registro guardado</string>
    <string name="no_existe">El usuario y la contraseña no coinciden con los registros</string>
    <string name="lista">Lista</string>
</resources>